syntax = "proto3";

package supabase_l2_blockchain.modules.crypto.v1;

message PrivateKeyEd25519 {
    bytes value = 1;
}

message PublicKeyEd25519 {
    bytes value = 1;
}
